opa-gatekeeper/practics/CT/4-CT-ns-pod-req-lbl.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: nspodrequired
spec:
  crd:
    spec:
      names:
        kind: NsPodRequired
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
            namespaces:
              type: array
              items:
                type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package nspodrequired

        violation[{"msg": msg}] {
          podns := input.review.object.metadata.namespace
          needns := input.parameters.namespaces[_]
          podns == needns

          provided := {label | label := input.review.object.metadata.labels[_]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided

          count(missing) > 0
          msg := sprintf("you must provide labels: %v", [missing])
        }
